log
Fri Apr 17 06:42:31 PM UTC 2026: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:77:5: error: expected ‘,’ or ‘;’ before ‘return’
   77 |     return index;
      |     ^~~~~~
hashmap.c:73:10: error: unused variable ‘index’ [-Werror=unused-variable]
   73 |     long index = hash(key, map->capacity)
      |          ^~~~~
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
d1ff18b
